# slang-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  check_version_is.py  requirements-ci.in  requirements-ci.txt
.github/workflows/: ci.yml  publish.yml  slang.yml
src/: extract.rs  hierarchy.rs  lib.rs  package.rs
src/extract/: grammar.pest  type_extract.rs
tests/: all_test.rs  hierarchy_test.rs  package_test.rs  spdx_test.rs  test.rs  version_test.rs
