[package]
name = "slang-rs"
version = "0.14.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust bindings for the Slang Verilog parser"
repository = "https://github.com/xlsynth/slang-rs.git"
homepage = "https://github.com/xlsynth/slang-rs.git"
documentation = "https://docs.rs/slang-rs"

[dependencies]
regex = "1.10.6"
serde_json = "1.0.128"
tempfile = "3"
pest = "2.1"
pest_derive = "2.1"
num-bigint = "0.4.3"
num-traits = "0.2"
which = "7.0.0"
