[package]
name = "slang-rs"
version = "0.15.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust bindings for the Slang Verilog parser"
repository = "https://github.com/xlsynth/slang-rs.git"
homepage = "https://github.com/xlsynth/slang-rs.git"
documentation = "https://docs.rs/slang-rs"

[dependencies]
regex = "1.10.6"
serde = "1.0"
serde_json = { version = "1.0.128", features = ["unbounded_depth"] }
serde_stacker = "0.1"
tempfile = "3"
pest = "2.1"
pest_derive = "2.1"
num-bigint = "0.4.3"
num-traits = "0.2"
which = "7.0.0"
